--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <runSuite>**/AccountAndSearchTestSuite.class</runSuite>
+        <runSuite>**/VerifyCustomWaitTestSuite.class</runSuite>
     </properties>
 
     <dependencies>
@@ -35,6 +37,15 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>${runSuite}</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
